manga v(2.12.0.3) Another Update
Server Side:
  -
  - GUI:
  - add deploy folder

Client Side:
  - GUI: change the style of quesion list navigator.

Gradle Side:-
  - JSON reader is inserted to server.

 Problems NOT SOLVED YET:
  - add column of total marks.
  - time left is not apear.
  - we need to move the validation method to be inside Student class
  - let the multiple choices boxes to be hidden without taking palace.
  - change exam time
  - ODS file loader still not implemented 100%