@@ -10,6 +10,7 @@
 		id 'java'
 		id 'eclipse' // optional (to generate Eclipse project files)
 	}
+	//apply from: 'http://dl.bintray.com/content/shemnon/javafx-gradle/javafx.plugin'
 	
 //	apply plugin: 'java'
 //	apply plugin: 'eclipse'
@@ -48,24 +49,22 @@
 	apply plugin: 'application' //adds 'run' task	
 	mainClassName = 'frawla.equiz.client.Main'
 
-/*
 	jar {
     	manifest {
     	 attributes(
 			'Class-Path': ".",
     	 	'Implementation-Title': "Gradle",
-            'Implementation-Version': version,
+            'Implementation-Version': '12.3',
             'Main-Class': mainClassName)
     	}
 	}
-*/
 
 	// launch4j: put all configuration of launch4j here 
 	createExe {
 		outputDir = "../../exe/client"
 		fileDescription	 = "Electronic Quizes - Client"
 		copyright = "All Copyright are recieved (c) 2016~2018, This is a program for e-quizes in order to make exams for students and mark registeration."
-		companyName = "Sami"
+		companyName = "Eng. Sami Alfattani"
 		 
 	    mainClassName = "frawla.equiz.client.Main"
 	    // = new File('../A') project(':eqClient')
@@ -73,13 +72,13 @@
 	    icon = new File(projPath + '/src/main/resources/images/exam.ico').absolutePath
 	    
 	    //headerType = "console" //no splash with console
-	    headerType = "gui" //no splash with console
+	    headerType = "gui" 
 		splashFileName = new File(projPath + '/src/main/resources/images/splash-client.bmp').absolutePath
 		
 		version = gitVersion() 
 		//project.name
-		outfile = 'eQuiz-client-' + version +'.exe'
-		productName	= 'eQuiz-client-' + version
+		outfile = 'eQuiz-client.exe'
+		productName	= 'eQuiz-client' 
 		internalName = 'eQuiz-client-' + version
 
 		// initialHeapSize = 0 //Optional
@@ -95,4 +94,62 @@
 		//see more: https://github.com/TheBoegl/gradle-launch4j
 	}
 
+	javafx {
+		appID 'frawla.equiz'
+		appName 'eQuiz-Client'
+		mainClass 'frawla.equiz.client.Main'
 	
+		//jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
+		systemProperties = [ 'prism.disableRegionCaching':'true' ]
+		arguments = ['-l', '--fast']
+	
+		embedLauncher = false
+	
+		// deploy/info attributes
+		category = 'Demos'
+		copyright = 'All Copyright are recieved (c) 2016~2018, This is a program for e-quizes in order to make exams for students and mark registeration.'
+		description = 'This is a project of Electronic Quizes.'
+		licenseType = ''
+		vendor = 'Eng. Sami Alfattani'
+		installSystemWide = true
+		menu = true
+		shortcut = true
+	
+		// app icons
+		icons {
+			shortcut = ['shortcut-16.png', 'shortcut-32.png', 
+						'shortcut-128.png', 'shortcut-256.png', 
+						'shortcut-16@2x.png', 'shortcut-32@2x.png', 
+						'shortcut-128@2x.png']
+			volume = 'javafx-icon.png'
+			setup = 'javafx-icon.png'
+		}
+	
+		releaseKey {
+			alias = 'production'
+			//keyPass = 'password' // provide via command line
+			keyStore = file('/Volumes/ProdThumbDrive/production.jks')
+			//storePass = 'password'  // provide via command line
+		}
+		signingMode 'release'
+	
+		width = 800
+		height = 600
+		embedJNLP = false
+		codebase = 'http://example.com/bogus/JNLP/Codebase'
+	
+		// arbitrary jnlp icons
+		icon {
+			href = 'src/main/resources/images/javafx-icon.png'
+			kind = 'splash'
+			width = 128
+			height = 128
+		}
+		icon {
+			href = 'shortcut-32@2x.png'
+			kind = 'selected'
+			width = 16
+			height = 16
+			scale = 1
+		}
+	}	
